--- a/project/jni/application/grafx2/AndroidAppSettings.cfg
+++ b/project/jni/application/grafx2/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="grafx2"
 AppFullName=com.grafx2
 
 # Application version code (integer)
-AppVersionCode=24206705
+AppVersionCode=24206706
 
 # Application user-visible version name (string)
-AppVersionName="2.4.2067.05"
+AppVersionName="2.4.2067.06"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -24,7 +24,7 @@ AppDataDownloadUrl="!Data|data2.zip"
 ResetSdlConfigForThisVersion=y
 
 # Delete application data files when upgrading (specify file/dir paths separated by spaces)
-DeleteFilesOnUpgrade="%"
+DeleteFilesOnUpgrade=".grafx2"
 
 # Here you may type readme text, which will be shown during startup. Format is:
 # Text in English, use \\\\n to separate lines (that's four backslashes)^de:Text in Deutsch^ru:Text in Russian^button:Button that will open some URL:http://url-to-open/
@@ -215,7 +215,7 @@ CompiledLibraries="jpeg png sdl_image sdl_ttf lua fontconfig"
 CustomBuildScript=n
 
 # Aditional CFLAGS for application
-AppCflags='-DVIRT_KEY -D__ENABLE_LUA__ -std=c99'
+AppCflags='-DVIRT_KEY -D__ENABLE_LUA__ -std=c99 -include jni/application/android_debug.h'
 
 # Additional LDFLAGS for application
 AppLdflags=''
