--- a/project/jni/application/openttd/AndroidAppSettings.cfg
+++ b/project/jni/application/openttd/AndroidAppSettings.cfg
@@ -28,7 +28,7 @@ DeleteFilesOnUpgrade="baseset .openttd/windows.cfg .openttd/hotkeys.cfg"
 
 # Here you may type readme text, which will be shown during startup. Format is:
 # Text in English, use \\\\n to separate lines (that's four backslashes)^de:Text in Deutsch^ru:Text in Russian^button:Button that will open some URL:http://url-to-open/
-ReadmeText=''
+ReadmeText='If this update runs slowly - install OpenTTD-lowmem,\\\\nit is tuned for older devices, and uses simpler 8bpp graphics\\\\n^button:Install OpenTTD-lowmem:https://play.google.com/store/apps/details?id=org.openttd.sdl.lowmem'
 
 # libSDL version to use (1.2/1.3/2.0)
 LibSdlVersion=1.2
@@ -201,7 +201,7 @@ FirstStartMenuOptions=''
 
 # Enable multi-ABI binary, with hardware FPU support - it will also work on old devices,
 # but .apk size is 2x bigger (y) / (n) / (x86) / (all)
-MultiABI=armeabi-v7a # all
+MultiABI=all
 
 # Minimum amount of RAM application requires, in Mb, SDL will print warning to user if it's lower
 AppMinimumRAM=0
