--- a/project/jni/application/openttd-lowmem/AndroidAppSettings.cfg
+++ b/project/jni/application/openttd-lowmem/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="OpenTTD lowmem"
 AppFullName=org.openttd.sdl.lowmem
 
 # Application version code (integer)
-AppVersionCode=14028
+AppVersionCode=14029
 
 # Application user-visible version name (string)
-AppVersionName="1.4.0.28"
+AppVersionName="1.4.0.29"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -18,7 +18,7 @@ AppVersionName="1.4.0.28"
 # If the URL does not contain 'http://' it is treated as file from 'project/jni/application/src/AndroidData' dir -
 # these files are put inside .apk package by build system
 # Also please avoid 'https://' URLs, many Android devices do not have trust certificates and will fail to connect to SF.net over HTTPS
-AppDataDownloadUrl="!!Data files - 20 Mb|http://sourceforge.net/projects/libsdl-android/files/OpenTTD/openttd-data-1.4.0.zip/download^!!Config file|:.openttd/openttd.cfg:openttd-1.4.0.27.cfg"
+AppDataDownloadUrl="!!Data files - 20 Mb|http://sourceforge.net/projects/libsdl-android/files/OpenTTD/openttd-data-1.4.0-1.zip/download^!!Config file|:.openttd/openttd.cfg:openttd-1.4.0.27.cfg"
 
 # Reset SDL config when updating application to the new version (y) / (n)
 ResetSdlConfigForThisVersion=y
