--- a/project/jni/application/xserver-debian/AndroidAppSettings.cfg
+++ b/project/jni/application/xserver-debian/AndroidAppSettings.cfg
@@ -7,10 +7,10 @@ AppName="Debian"
 AppFullName=com.cuntubuntu
 
 # Application version code (integer)
-AppVersionCode=140501
+AppVersionCode=140502
 
 # Application user-visible version name (string)
-AppVersionName="14.05.01"
+AppVersionName="14.05.02"
 
 # Specify path to download application data in zip archive in the form 'Description|URL|MirrorURL^Description2|URL2|MirrorURL2^...'
 # If you'll start Description with '!' symbol it will be enabled by default, other downloads should be selected by user from startup config menu
@@ -24,7 +24,7 @@ AppDataDownloadUrl="!!System image|:data.tar.gz:http://sourceforge.net/projects/
 ResetSdlConfigForThisVersion=y
 
 # Delete application data files when upgrading (specify file/dir paths separated by spaces)
-DeleteFilesOnUpgrade="img"
+DeleteFilesOnUpgrade="libsdl-DownloadFinished-0.flag libsdl-DownloadFinished-1.flag libsdl-DownloadFinished-2.flag libsdl-DownloadFinished-3.flag"
 
 # Here you may type readme text, which will be shown during startup. Format is:
 # Text in English, use \\\\n to separate lines (that's four backslashes)^de:Text in Deutsch^ru:Text in Russian^button:Button that will open some URL:http://url-to-open/
