--- a/project/jni/application/xserver-gimp/AndroidAppSettings.cfg
+++ b/project/jni/application/xserver-gimp/AndroidAppSettings.cfg
@@ -24,11 +24,11 @@ AppDataDownloadUrl="!!Data files|:data.tar.gz:http://sourceforge.net/projects/li
 ResetSdlConfigForThisVersion=y
 
 # Delete application data files when upgrading (specify file/dir paths separated by spaces)
-DeleteFilesOnUpgrade="img bin boot dev etc home lib media mnt opt proc root run sbin selinux srv sys tmp usr var"
+DeleteFilesOnUpgrade="libsdl-DownloadFinished-0.flag libsdl-DownloadFinished-1.flag libsdl-DownloadFinished-2.flag libsdl-DownloadFinished-3.flag"
 
 # Here you may type readme text, which will be shown during startup. Format is:
 # Text in English, use \\\\n to separate lines (that's four backslashes)^de:Text in Deutsch^ru:Text in Russian^button:Button that will open some URL:http://url-to-open/
-ReadmeText=''
+ReadmeText='This app will now download 270Mb of data.'
 
 # libSDL version to use (1.2/1.3/2.0)
 LibSdlVersion=1.2
